# myNN

./: CMakeLists.txt  LICENSE  README.md  sample.cpp
nn/: nn.h  nn_functions.cpp  nn_grad.cpp  nn_matrix.cpp  nn_module.cpp  nn_tensor.cpp  nn_var.cpp
